added more than 3 pages for the arabic content

--- a/about-us.html
+++ b/about-us.html
@@ -241,7 +241,7 @@
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com/contact-us">
+                <a href="chnage-pass.html">
 
                     Change Hotel Password
                     <i class="fas fa-chevron-right"></i>
@@ -383,7 +383,7 @@
             </a>
             </div>
             <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="forget-password.html">
+                <a href="chnage-pass.html">
                     <h2>
 
                         Change Hotel Password
