--- a/index-rtl.html
+++ b/index-rtl.html
@@ -46,7 +46,7 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="index.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -56,10 +56,10 @@
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">
+                    <a  href="index-rtl.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,7 +118,7 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="index.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
