--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -9,14 +9,8 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/cities.css">
-    <style>
-        #sections{
-            padding-top: 40px !important;
-            text-align: left;
-        }
-    </style>
-
+    <link rel="stylesheet" href="css/info/register-new-guest.css">
+    <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
 <!-- start of  nav for desktop-->
@@ -32,10 +26,15 @@
                 <img src="img/second-logo2.png" alt="logo" class="last-line">
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>Pyramid Challenge</span>
-                        <span>Digital Hotels</span>
+                        <span>التحدى الهرمى
+ </span>
+                        <span>
+                            الفنادق الرقميه
+
+                        </span>
                     </h2>
-                    <p>for best content view , go to desktop , laptop </p>
+                    <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
+                    </p>
                 </div>
                 <!--          text-second-logo  -->
             </div>
@@ -55,10 +54,12 @@
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">Register New Guest</a>
+                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">Sign in</a>
+                    <a  href="index.html">
+                        دخول حساب فندقى
+                    </a>
                 </div>
             </div>
             <!--        addational-register-->
@@ -68,20 +69,21 @@
 
     <nav class="nav-bottom">
         <ul  >
-            <li><a href="https://www.pyramid-challenge.com">
-                Home
+            <li><a href="https://ar.pyramid-challenge.com/">
+                الرئيسيه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/about-us ">
-                About Us
+            <li><a href="https://ar.pyramid-challenge.com/about-us">
+                عن الشركه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/buy-digital-key">
-                Buy Digital Key
+            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
+                شراء مفتاح رقمى
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/faq">
-                FAQ
+            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
+                أسئله و أجابه
             </a></li>
-            <li><a href="https://www.pyramid-challenge.com/contact-us ">
-                Contact Us
+            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
+                أتصل بنا
+
             </a></li>
         </ul>
     </nav>
@@ -105,11 +107,13 @@
                 </div>
                 <div class="text-second-logo" >
                     <h2  class="wow fadeInDown" data-wow-duration="1.8s" data-wow-delay="1s" >
-                        <span>Pyramid Challenge</span>
-                        <span>Digital Hotels</span>
+                        <span>التحدى الهرمى
+ </span>
+                        <span>
+                            الفنادق الرقميه
+
+                        </span>
                     </h2>
-
-
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
                             <a class="lang-text" href="cities.html">English</a>
@@ -132,7 +136,8 @@
 
             </div>
             <div class="quote-text">
-                <p>for best content view , go to desktop , laptop </p>
+                <p>للحصول على أفضل رؤيه للمحتوى ، أفتح من الكمبيوتر أو اللاب توب
+                </p>
             </div>
             <!--        second logo -->
 
@@ -140,10 +145,10 @@
         <div class="addational-register">
 
             <div class="register btn">
-                <a  href="register-new-guest.html">Register New Guest</a>
+                <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">Sign in</a>
+                <a  href="index.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -160,7 +165,7 @@
                 <a href="my-hotel-info.html">
 
 
-                    My Hotel Info
+                    بياناتى
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -170,7 +175,7 @@
                 <a href="hotek-guest.html">
 
 
-                    My Hotel Guests Report
+                    تقرير بنزلاء فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -181,7 +186,7 @@
                 <a href="cities.html">
 
 
-                    Hotel Cities Report
+                    تقرير مُدنى الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -191,17 +196,17 @@
                 <a href="hotel-rooms.html">
 
 
-                    Hotel Rooms Report
+                    تقرير الغرف الفندقيه
                     <i class="fas fa-chevron-right"></i>
 
 
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/offer-of-the-month">
+                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
 
 
-                    Offer Of The Month
+                    عرض الشهر
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -212,7 +217,7 @@
                 <a href="withdraw-profits.html">
 
 
-                    Withdraw Profits
+                    طلب الأرباح
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
@@ -224,41 +229,41 @@
                 <a href="business-commitment.html">
 
 
-                    Your Business Commitment
+                    ألتزام العمل
                     <i class="fas fa-chevron-right"></i>
 
 
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-post-via-facebook">
+                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
 
 
-                    share post via facebook
+                    مشاركة منشور دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
 
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-video-via-facebook">
+                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook">
 
-                    share video via facebook
+                    مشاركة فيديو دعائى عبر فيسبوك
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com/contact-us">
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
 
-                    Change Hotel Password
+                    تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
 
 
-                    Share us your idea
+                    شاركنا فكرتك
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -266,10 +271,10 @@
             </li>
 
             <li>
-                <a href="https://www.pyramid-challenge.com ">
+                <a href="https://ar.pyramid-challenge.com ">
 
 
-                    Log Out Hotel Account
+                    خروج من حساب فندقى
                     <i class="fas fa-chevron-right"></i>
 
 
@@ -287,180 +292,39 @@
 </section>
 <!-- end of nav-->
 
-
 <!-- start of form-->
-<section id="sections-hotel">
-    <div class="container">
-        <div class="section-back">
-            <a href="about-us.html">Back to Hotel  Sections</a>
-        </div>
-    </div>
-    <div class="container">
-        <div class="hotel-info">
-            <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="#">
-                    Hotel Cities Report
-                </a>
-            </h3>
-
-        </div>
-    </div>
-</section>
-<!--
-
-<section id="sections">
-
-    Your Business Commitment
-    you have determined your business commit
-
-    your goal ( your dream) : xxxx
-
-    your financial goal : xxxx
-
-    registered guests from your hotel number : xxxx
-
-
-
-
-
-    you can increase your hotel profits any time , by registered more guests from your hotel number
-
-    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
-
-<div class="container">
-    <div class="section-back">
-        <a href="about-us.html">Back to Sections</a>
-    </div>
-    <div class="section-title">
-        <h2><a href="#">
-            My Hotel Info:
+<section id="form">
+    <div class="form-title">
+        <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+        ><a href="#" >
+            تسجيل نزيل جديد
         </a></h2>
     </div>
-    <div class="hotel-info">
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Owner Name :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Email : Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Phone :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Birth Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Country :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Gender :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Hotel Open Date :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            Your Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-        <h3 class="wow rotateOut" data-wow-duration="1s">
-            You Have Registered as a Guest in Hotel Number :
-            <span>xxxxxx</span>
-        </h3>
-    </div>
-</div>
-</section>
--->
-<!-- end of form -->
-<!-- end of nav-->
-<!-- Table -->
-<section class="hotel-guest">
+
     <div class="container">
 
-        <table>
-            <tr>
+        <form action="#" class="form">
+            <div class="form-group">
+                <label for="number"></label>
+                <input type="text" class="form-control" id="number" placeholder="أدخل رقم فندق الشريك الذى دعاك  ">
+            </div>
 
-                <th>Hotel Cities</th>
-                <th>Registered Guests in City</th>
-
-            </tr>
-            <tr>
-                <td>City 1</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 2</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 3</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 4</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 5</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 6</td>
-                <td></td>
-
-
-            </tr>
-            <tr>
-                <td>City 7</td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>City 8</td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>City 9</td>
-                <td></td>
-
-            </tr>
-            <tr>
-                <td>City 10</td>
-                <td></td>
-
-            </tr>
-        </table>
+            <a href="register-new-guest-2.html" class="submit" >الخطوه التاليه</a>
+        </form>
     </div>
 </section>
-<!--end of table -->
+<!-- end of form -->
 <footer>
     <div class="container">
         <div class="copyright">
             <h3>
-                <a href="https://www.pyramid-challenge.com/terms-conditions">
-                    Copyright© Direct. All Rights Reserved.terms&conditions
+                <a href="https://ar.pyramid-challenge.com/terms-conditions ">
+                    شركة دايركت © جميع الحقوق محفوظه . شروط و بنود
                 </a>
             </h3>
         </div>
         <div class="copyright-logo">
-            <a href="https://www.pyramid-challenge.com/terms-conditions">
+            <a href="https://ar.pyramid-challenge.com/terms-conditions ">
                 <img src="img/footer-logo.png"  class="wow fadeInLeft" data-wow-duraton="2s"  alt="footer-logo">
             </a>
         </div>
