--- a/change-pass-rtl.html
+++ b/change-pass-rtl.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about/custom-style.css">
+    <link rel="stylesheet" href="css/info/forget-pass.css">
     <link rel="stylesheet" href="css/style-rtl.css">
 </head>
 <body>
@@ -46,20 +46,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="chnage-pass.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="index-rtl.html">Arabic</a>
+                            <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">
+                    <a  href="index-rtl.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="chnage-pass.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="change-pass-rtl.html">Arabic</a>
                             </div>
 
                         </div>
@@ -185,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="cities.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html">
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -293,136 +293,47 @@
 
 </section>
 <!-- end of nav-->
+<section id="sections-hotel" >
+ <div id="change-pass">
+     <div class="container">
+         <div class="section-back">
+             <a href="about-us-rtl.html">الرجوع لأقسام الفندق</a>
+         </div>
+     </div>
+     <div class="container">
+         <div class="hotel-info">
+             <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+             >
+                 <a href="#">
+                     تغيير كلمة السر للفندق
+                 </a>
+             </h3>
+
+         </div>
+     </div>
+ </div>
+</section>
 <!-- start of form-->
-<section id="sections">
+<section id="form">
+
 
     <div class="container">
-        <div class="section-title">
 
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >
-                <a href="#">
-                    <i class="fas fa-chevron-left"></i>
-                   اقسام الفندق
-
-                </a>
-            </h2>
-
-        </div>
-        <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
-                <a href="my-hotel-info-rtl-html.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        بياناتى
-
-
-                    </h2>
-                </a>
+        <form action="#" class="form">
+            <div class="form-group wow fadeInRight"  data-wow-duration="1s" >
+                <label for="number"></label>
+                <input type="password" class="form-control" id="number" placeholder="أدخل كلمة السر الحاليه للفندق">
             </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotek-guest.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير بنزلاء فندقى
-
-                    </h2>
-                </a>
+            <div class="form-group wow fadeInRight"  data-wow-duration="3s">
+                <label for="password"></label>
+                <input type="password" class="form-control"  id="password" placeholder="أدخل كلمة السر الجديده">
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="cities.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير مُدنى الفندقيه
-                    </h2>
-                </a>
+            <div class="form-group wow fadeInRight"  data-wow-duration="4s">
+                <label for="passwordd"></label>
+                <input type="password" class="form-control"  id="passwordd" placeholder="أدخل كلمة السر الجديده مره أخرى">
             </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="hotel-rooms.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير الغرف الفندقيه
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
-                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        عرض الشهر
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="withdraw-profits.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        طلب الأرباح
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="business-commitment.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        ألتزام العمل
-
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة منشور دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة فيديو دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="change-pass-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تغيير كلمة السر للفندق
-
-                    </h2>
-                </a>
-            </div>
-
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
-                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        شاركنا فكرتك
-
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
-                <a href="https://ar.pyramid-challenge.com  ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        خروج من حساب فندقى
-
-
-                    </h2>
-                </a>
-            </div>
-
-        </div>
+            <button class="change wow fadeInRight"  data-wow-duration="6s"  >تغيير كلمة السر للفندق</button>
+        </form>
     </div>
 </section>
 <!-- end of form -->
