added more pages like business

--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -309,7 +309,7 @@
                 <input type="text" class="form-control" id="number" placeholder="أدخل رقم فندق الشريك الذى دعاك  ">
             </div>
 
-            <a href="register-new-guest-2.html" class="submit" >الخطوه التاليه</a>
+            <a href="register-new-guest-rtl-2.html" class="submit" >الخطوه التاليه</a>
         </form>
     </div>
 </section>
