--- a/business-commitment-rtl.html
+++ b/business-commitment-rtl.html
@@ -9,11 +9,17 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/about/custom-style.css">
+    <link rel="stylesheet" href="css/info/business-commitment.css">
     <link rel="stylesheet" href="css/style-rtl.css">
+    <style>
+        #sections{
+            padding-top: 40px !important;
+            text-align: left;
+        }
+    </style>
+
 </head>
 <body>
-
 
 <!-- start of  nav for desktop-->
 <section id="nav">
@@ -46,7 +52,7 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="index.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -56,10 +62,10 @@
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">
+                    <a  href="index-rtl.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,7 +124,7 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="index.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
@@ -185,7 +191,7 @@
             </li>
 
             <li>
-                <a href="cities-rtl.html">
+                <a href="cities.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -255,7 +261,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html">
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
@@ -293,139 +299,188 @@
 
 </section>
 <!-- end of nav-->
+
 <!-- start of form-->
+<section id="sections-hotel">
+  <div id="business-rtl">
+      <div class="container-rtl">
+          <div class="section-back">
+              <a href="about-us-rtl.html">
+                  الرجوع لأقسام الفندق
+              </a>
+          </div>
+          <div class="section-title">
+              <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
+              ><a href="#">
+                  ألتزام العمل
+
+              </a></h2>
+          </div>
+      </div>
+      <div class="container-rtl">
+          <div class="hotel-info">
+              <h3>
+                  لقد قمت بنفسك بتحديد ألتزام عملك
+
+              </h3>
+              <h3>
+                  هدفك هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3>
+                  طموحك المالى هو :
+                  <span>xxxxxx</span>
+              </h3>
+              <h3 >
+                  عدد النزلاء المسجلين من خلال رقم فندقك :
+                  <span>xxxxxx</span>
+              </h3>
+              <p>
+                  يمكنك زيادة أرباحك فى أى وقت , من خلال تسجيل المزيد من النزلاء من خلال رقم فندقك
+
+
+                  الجدول التالى يبين ما هو سقف أرباحك , أعتماداً على عدد النزلاء المسجلين من خلال رقم فندقك
+
+              </p>
+          </div>
+      </div>
+  </div>
+</section>
+<!--
+
 <section id="sections">
 
+    Your Business Commitment
+    you have determined your business commit
+
+    your goal ( your dream) : xxxx
+
+    your financial goal : xxxx
+
+    registered guests from your hotel number : xxxx
+
+
+
+
+
+    you can increase your hotel profits any time , by registered more guests from your hotel number
+
+    the following table shows your hotel maximum profits  , depending on number of guests that will be registered  from your hotel number
+
+<div class="container">
+    <div class="section-back">
+        <a href="about-us.html">Back to Sections</a>
+    </div>
+    <div class="section-title">
+        <h2><a href="#">
+            My Hotel Info:
+        </a></h2>
+    </div>
+    <div class="hotel-info">
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Owner Name :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Email : Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Phone :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Birth Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Country :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Gender :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Hotel Open Date :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            Your Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+        <h3 class="wow rotateOut" data-wow-duration="1s">
+            You Have Registered as a Guest in Hotel Number :
+            <span>xxxxxx</span>
+        </h3>
+    </div>
+</div>
+</section>
+-->
+<!-- end of form -->
+<!-- end of nav-->
+<!-- Table -->
+<section class="hotel-guest">
     <div class="container">
-        <div class="section-title">
 
-            <h2 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"
-            >
-                <a href="#">
-                    <i class="fas fa-chevron-left"></i>
-                   اقسام الفندق
+        <table>
+            <tr>
 
-                </a>
-            </h2>
+                <th>عدد نزلاء فندقك</th>
+                <th>سقف ارباح فندقك</th>
 
-        </div>
-        <div class="section-row">
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.3s" data-wow-delay="0.3s">
-                <a href="my-hotel-info-rtl-html.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        بياناتى
+            </tr>
+            <tr>
+                <td>نزيل واحد</td>
+                <td>$100</td>
 
 
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotek-guest.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير بنزلاء فندقى
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.5s" data-wow-delay="0.5s">
-                <a href="cities.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير مُدنى الفندقيه
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.6s" data-wow-delay="0.6s">
-                <a href="hotel-rooms.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تقرير الغرف الفندقيه
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.7s" data-wow-delay="0.7s">
-                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        عرض الشهر
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.8s" data-wow-delay="0.8s">
-                <a href="withdraw-profits.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        طلب الأرباح
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="business-commitment-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        ألتزام العمل
+            </tr>
+            <tr>
+                <td>2 نزلاء</td>
+                <td>$1000</td>
 
 
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="0.9s" data-wow-delay="0.9s">
-                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة منشور دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        مشاركة فيديو دعائى عبر فيسبوك
-
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.1s" data-wow-delay="1.1s">
-                <a href="change-pass-rtl.html">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        تغيير كلمة السر للفندق
-
-                    </h2>
-                </a>
-            </div>
-
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.2s" data-wow-delay="1.2s">
-                <a href="https://www.pyramid-challenge.com/share-us-your-idea ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        شاركنا فكرتك
+            </tr>
+            <tr>
+                <td>3 نزلاء</td>
+                <td>$30,000</td>
 
 
-                    </h2>
-                </a>
-            </div>
-            <div class="section-field  wow fadeInLeft" data-wow-duration="1.3s" data-wow-delay="1.3s">
-                <a href="https://ar.pyramid-challenge.com  ">
-                    <h2>
-                        <i class="fas fa-chevron-left"></i>
-                        خروج من حساب فندقى
+            </tr>
+            <tr>
+                <td> 4 نزلاء</td>
+                <td>$40,000</td>
 
 
-                    </h2>
-                </a>
-            </div>
+            </tr>
+            <tr>
+                <td>5 نزلاء</td>
+                <td>$50,000</td>
 
-        </div>
+
+            </tr>
+            <tr>
+                <td>ستة نزلاء</td>
+                <td>$300,000</td>
+
+
+            </tr>
+            <tr>
+                <td> سبعة نزلاء</td>
+                <td>$1,000,000</td>
+
+            </tr>
+            <tr>
+                <td>أكثر من سبعة نزلاء</td>
+                <td>$ سقف مفتوح </td>
+
+            </tr>
+
+        </table>
     </div>
 </section>
-<!-- end of form -->
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
