arabic version more pages : withdraw profit wtih link of section

--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -216,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
 
 
                     طلب الأرباح
