arabic version more pages : withdraw profit wtih link of section

--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest-rtl.html">
 
 
                     تقرير بنزلاء فندقى
@@ -321,7 +321,7 @@
                 </a>
             </div>
             <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
                     <h2>
                         <i class="fas fa-chevron-left"></i>
                         تقرير بنزلاء فندقى
