--- a/about-us.html
+++ b/about-us.html
@@ -160,7 +160,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     My Hotel Guests Report
@@ -307,7 +307,7 @@
                </a>
             </div>
             <div class="section-field wow fadeInLeft" data-wow-duration="0.4s" data-wow-delay="0.4s">
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
                 <h2>
 
                         My Hotel Guests Report
