--- a/business-commitment-rtl.html
+++ b/business-commitment-rtl.html
@@ -180,7 +180,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     تقرير بنزلاء فندقى
