--- a/change-pass-rtl.html
+++ b/change-pass-rtl.html
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     تقرير بنزلاء فندقى
