--- a/cities.html
+++ b/cities.html
@@ -167,7 +167,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     My Hotel Guests Report
