--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     My Hotel Guests Report
