--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     تقرير بنزلاء فندقى
