--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -163,7 +163,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     My Hotel Guests Report
