--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -176,7 +176,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     تقرير بنزلاء فندقى
