--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -172,7 +172,7 @@
             </li>
 
             <li>
-                <a href="hotek-guest.html">
+                <a href="hotel-guest.html">
 
 
                     تقرير بنزلاء فندقى
