we added it finally and hope its done

--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -46,11 +46,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="about-us.html" >English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="index-rtl.html">Arabic</a>
+                            <a class="lang-text" href="about-us-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="about-us.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="about-us-rtl.html">Arabic</a>
                             </div>
 
                         </div>
@@ -195,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
 
 
                     تقرير الغرف الفندقيه
@@ -228,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment.html">
+                <a href="business-commitment-rtl.html">
 
 
                     ألتزام العمل
