--- a/hotel-rooms-rtl.html
+++ b/hotel-rooms-rtl.html
@@ -7,11 +7,10 @@
     <title>Directeg</title>
     <link rel='icon' href='img/logo.png' type='image/x-icon'/>
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href='css/animate.css'>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/info/custom-style.css">
+    <link rel="stylesheet" href="css/info/hotel-room.css">
     <link rel="stylesheet" href="css/style-rtl.css">
-
 </head>
 <body>
 
@@ -46,20 +45,20 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="my-hotel-info.html">English</a>
+                        <a class="lang-text" href="hotel-rooms.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                            <a class="lang-text" href="hotel-rooms-rtl.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
                 <div class="register btn">
-                    <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
+                    <a  href="register-new-guest-rtl.html">تسجيل نزيل جديد</a>
                 </div>
                 <div class="sign btn">
-                    <a  href="index.html">
+                    <a  href="index-rtl.html">
                         دخول حساب فندقى
                     </a>
                 </div>
@@ -118,16 +117,15 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="my-hotel-info.html">English</a>
+                            <a class="lang-text" href="index.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="my-hotel-info-rtl-html.html">Arabic</a>
+                                <a class="lang-text" href="index-rtl.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
-
                 </div>
 
                 <!--          text-second-logo  -->
@@ -295,62 +293,168 @@
 </section>
 <!-- end of nav-->
 <!-- start of form-->
-<section id="sections">
-    <!--
-    -->
-    <div class="container-rtl">
-        <div class="section-back wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
-            <a href="about-us-rtl.html">
-                الرجوع لأقسام الفندق
-            </a>
+<section id="sections-hotel">
+   <div id="rooms">
+       <div class="container">
+           <div class="section-back">
+               <a href="about-us.html">
+                   الرجوع لأقسام الفندق
+               </a>
+           </div>
+       </div>
+       <div class="container">
+           <div class="hotel-info">
+               <h3 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s">
+                   <a href="#">
+                       تقرير الغرف الفندقيه
+                   </a>
+               </h3>
+
+           </div>
+       </div>
+   </div>
+</section>
+<!-- end of form -->
+
+<!-- Table -->
+<section class="hotel-guest">
+    <div class="container">
+        <div class="options">
+            <select class="jp_ir has-custom-focus _1360x" id="comp-kjta1cd8collection" required="">
+                <option >عرض غرف النزلاء في المدن الفندقية الخاصة بك</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 1</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 2</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 3</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 4</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 5</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 6</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 7</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 8</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 9</option>
+                <option >عرض غرف النزلاء بالمدينة رقم: 10</option></select>
         </div>
-        <div class="section-title">
-            <h2  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1s"><a href="#">
-                :بيانات الفندق
-            </a></h2>
-        </div>
-        <div class="hotel-info">
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                أسم صاحب الفندق :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                البريد الألكترونى :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                رقم الهاتف :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                تاريخ الميلاد
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                البلد :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s" >
-                النوع :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                تاريخ فتح الفندق :
-                <span>xxxxxx</span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                رقم فندقك :
-                <span>
-                    xxxxxx
-                </span>
-            </h3>
-            <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1s">
-                لقد تم تسجيلك فى الفندق رقم :
-                <span>xxxxxx</span>
-            </h3>
-        </div>
+
     </div>
 </section>
+<!--start table-->
+<section class="hotel-guest-table">
+    <div class="container">
+        <table>
+            <tr>
+                <th>#</th>
+                <th>أسم النزيل </th>
+                <th>رقم الغرفه </th>
+                <th>تاريخ فتح الغرفه </th>
+                <th>بلد النزيل </th>
+                <th>مسجل في الفندق برقم </th>
+                <th>عدد نزلاء الفندق </th>
+
+            </tr>
+            <tr>
+                <td>1</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>3</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>4</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>5</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>6</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>7</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>8</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>9</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+            <tr>
+                <td>10</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+
+            </tr>
+        </table>
+    </div>
+</section>
+<!--end of table -->
 <footer>
     <div class="container">
         <div class="copyright">
