--- a/withdraw-profits-rtl.html
+++ b/withdraw-profits-rtl.html
@@ -46,11 +46,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="index.html">English</a>
+                        <a class="lang-text" href="withdraw-profits.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="index-rtl.html">Arabic</a>
+                            <a class="lang-text" href="withdraw-profits-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -118,11 +118,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="index.html">English</a>
+                            <a class="lang-text" href="withdraw-profits.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="withdraw-profits-rtl.html">Arabic</a>
                             </div>
 
                         </div>
@@ -297,7 +297,7 @@
    <div id="withdraw-profit">
        <div class="container">
            <div class="section-back">
-               <a href="about-us.html">الرجوع لأقسام الفندق </a>
+               <a href="about-us-rtl.html">الرجوع لأقسام الفندق </a>
            </div>
        </div>
        <div class="container">
