--- a/hotel-guest-rtl.html
+++ b/hotel-guest-rtl.html
@@ -46,11 +46,11 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <a class="lang-text" href="index.html">English</a>
+                        <a class="lang-text" href="hotel-guest.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <a class="lang-text" href="index-rtl.html">Arabic</a>
+                            <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
                         </div>
 
                     </div>
@@ -118,15 +118,16 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <a class="lang-text" href="index.html">English</a>
+                            <a class="lang-text" href="hotel-guest.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <a class="lang-text" href="index-rtl.html">Arabic</a>
+                                <a class="lang-text" href="hotel-guest-rtl.html">Arabic</a>
                             </div>
 
                         </div>
                     </div>
+
                 </div>
 
                 <!--          text-second-logo  -->
