--- a/register-new-guest-2.html
+++ b/register-new-guest-2.html
@@ -43,15 +43,16 @@
 
                 <div class="switch-lang">
                     <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                        <p class="lang-text">English</p>
+                        <a class="lang-text" href="register-new-guest.html">English</a>
                     </div>
                     <div class="lang-dropdown">
                         <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                            <p class="lang-text">Arabic</p>
+                            <a class="lang-text" href="register-new-guest-2.html">Arabic</a>
                         </div>
 
                     </div>
                 </div>
+
                 <div class="register btn">
                     <a  href="register-new-guest.html">Register New Guest</a>
                 </div>
@@ -108,11 +109,11 @@
                     </h2>
                     <div class="switch-lang">
                         <div class="current-lang"><img class="lang-flag" src="img/usa.png"/>
-                            <p class="lang-text">English</p>
+                            <a class="lang-text" href="register-new-guest.html">English</a>
                         </div>
                         <div class="lang-dropdown">
                             <div class="selecting-lang"><img class="lang-flag" src="img/egypt.png"/>
-                                <p class="lang-text">Arabic</p>
+                                <a class="lang-text" href="register-new-guest-2.html">Arabic</a>
                             </div>
 
                         </div>
