we added it finally and hope its done 1

--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -166,7 +166,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info.html">
+                <a href="my-hotel-info-rtl-html.html">
 
 
                     بياناتى
@@ -176,7 +176,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="hotel-guest-rtl.html">
 
 
                     تقرير بنزلاء فندقى
@@ -187,7 +187,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="cities-rtl.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -197,7 +197,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
 
 
                     تقرير الغرف الفندقيه
@@ -218,7 +218,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
 
 
                     طلب الأرباح
@@ -230,7 +230,7 @@
 
 
             <li>
-                <a href="business-commitment.html">
+                <a href="business-commitment-rtl.html">
 
 
                     ألتزام العمل
@@ -289,7 +289,6 @@
 
         </ul>
     </nav>
-
 
 
 
