--- a/register-new-guest-rtl.html
+++ b/register-new-guest-rtl.html
@@ -67,27 +67,137 @@
 
     </div>
 
-    <nav class="nav-bottom">
-        <ul  >
-            <li><a href="https://ar.pyramid-challenge.com/">
-                الرئيسيه
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/about-us">
-                عن الشركه
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/buy-digital-key">
-                شراء مفتاح رقمى
-            </a></li>
-            <li><a href="https://ar.pyramid-challenge.com/ar-faq ">
-                أسئله و أجابه
-            </a></li>
-            <li><a href=" https://ar.pyramid-challenge.com/contact-us">
-                أتصل بنا
+    <nav class=" nav-bottom-mobile">
 
-            </a></li>
+
+        <ul  >
+
+            <hr>
+
+            <li>
+                <a href="my-hotel-info-rtl-html.html">
+
+
+                    بياناتى
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotel-guest-rtl.html">
+
+
+                    تقرير بنزلاء فندقى
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="cities-rtl.html">
+
+
+                    تقرير مُدنى الفندقيه
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+
+            <li>
+                <a href="hotel-rooms-rtl.html">
+
+
+                    تقرير الغرف الفندقيه
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://ar.pyramid-challenge.com/offer-of-the-month ">
+
+
+                    عرض الشهر
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+
+            </li>
+            <li>
+                <a href="withdraw-profits-rtl.html">
+
+
+                    طلب الأرباح
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+
+            </li>
+
+
+            <li>
+                <a href="business-commitment-rtl.html">
+
+
+                    ألتزام العمل
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+            <li>
+                <a href="https://ar.pyramid-challenge.com/share-post-via-facebook ">
+
+
+                    مشاركة منشور دعائى عبر فيسبوك
+                    <i class="fas fa-chevron-right"></i>
+
+                </a>
+            </li>
+            <li>
+                <a href="https://ar.pyramid-challenge.com/share-video-via-facebook">
+
+                    مشاركة فيديو دعائى عبر فيسبوك
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
+
+                    تغيير كلمة السر للفندق
+                    <i class="fas fa-chevron-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="https://ar.pyramid-challenge.com/share-us-your-idea  ">
+
+
+                    شاركنا فكرتك
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+            <li>
+                <a href="https://ar.pyramid-challenge.com ">
+
+
+                    خروج من حساب فندقى
+                    <i class="fas fa-chevron-right"></i>
+
+
+                </a>
+            </li>
+
+
+
         </ul>
     </nav>
-    <!--        second logo -->
 
 </section>
 <!-- mobile menu-->
