--- a/about-us-rtl.html
+++ b/about-us-rtl.html
@@ -164,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info.html">
+                <a href="my-hotel-info-rtl-html.html">
 
 
                     بياناتى
@@ -255,7 +255,7 @@
             </li>
 
             <li>
-                <a href="change-pass-rtl.html">
+                <a href="https://ar.pyramid-challenge.com/contact-us ">
 
                     تغيير كلمة السر للفندق
                     <i class="fas fa-chevron-right"></i>
