--- a/my-hotel-info-rtl-html.html
+++ b/my-hotel-info-rtl-html.html
@@ -165,7 +165,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info.html">
+                <a href="my-hotel-info-rtl-html.html">
 
 
                     بياناتى
@@ -175,7 +175,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="hotel-guest-rtl.html">
 
 
                     تقرير بنزلاء فندقى
@@ -186,7 +186,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="cities-rtl.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -196,7 +196,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
 
 
                     تقرير الغرف الفندقيه
@@ -217,7 +217,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
 
 
                     طلب الأرباح
@@ -229,7 +229,7 @@
 
 
             <li>
-                <a href="business-commitment.html">
+                <a href="business-commitment-rtl.html">
 
 
                     ألتزام العمل
