--- a/withdraw-profits-rtl.html
+++ b/withdraw-profits-rtl.html
@@ -164,7 +164,7 @@
             <hr>
 
             <li>
-                <a href="my-hotel-info.html">
+                <a href="my-hotel-info-rtl-html.html">
 
 
                     بياناتى
@@ -174,7 +174,7 @@
             </li>
 
             <li>
-                <a href="hotel-guest.html">
+                <a href="hotel-guest-rtl.html">
 
 
                     تقرير بنزلاء فندقى
@@ -185,7 +185,7 @@
             </li>
 
             <li>
-                <a href="cities.html">
+                <a href="cities-rtl.html">
 
 
                     تقرير مُدنى الفندقيه
@@ -195,7 +195,7 @@
             </li>
 
             <li>
-                <a href="hotel-rooms.html">
+                <a href="hotel-rooms-rtl.html">
 
 
                     تقرير الغرف الفندقيه
@@ -216,7 +216,7 @@
 
             </li>
             <li>
-                <a href="withdraw-profits.html">
+                <a href="withdraw-profits-rtl.html">
 
 
                     طلب الأرباح
@@ -228,7 +228,7 @@
 
 
             <li>
-                <a href="business-commitment.html">
+                <a href="business-commitment-rtl.html">
 
 
                     ألتزام العمل
