we added it finally and hope its done

--- a/business-commitment-rtl.html
+++ b/business-commitment-rtl.html
@@ -266,7 +266,7 @@
                 <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">دخول حساب فندقى</a>
+                <a  href="index-rtl.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
