--- a/register-new-guest-rtl-2.html
+++ b/register-new-guest-rtl-2.html
@@ -152,7 +152,7 @@
                 <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">دخول حساب فندقى</a>
+                <a  href="index-rtl.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
@@ -424,7 +424,7 @@
                 </div>
             </div>
 
-            <a href="registration-success-message.html" class="submit"  >أفتح غرفتك الأفتراضيه </a>
+            <a href="registration-success-message-rtl.html" class="submit"  >أفتح غرفتك الأفتراضيه </a>
         </form>
     </div>
 </section>
