--- a/index-rtl.html
+++ b/index-rtl.html
@@ -150,7 +150,7 @@
                 <a  href="register-new-guest.html">تسجيل نزيل جديد</a>
             </div>
             <div class="sign btn">
-                <a  href="index.html">دخول حساب فندقى</a>
+                <a  href="index-rtl.html">دخول حساب فندقى</a>
             </div>
         </div>
         <!--        addational-register-->
